<resources>
    <string name="app_name">Loan Online</string>

    <string name="prompt_login">Login</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Register</string>
    <string name="login">Login</string>
    <string name="success">Success</string>
    <string name="already_registration_text">Have an account</string>
    <string name="no_registration_text">Have no account</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Login must be >5 characters</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="loan_request_failed">"Loan request failed"</string>
    <string name="loan_conditions_request_failed">"Loan conditions request failed"</string>
    <string name="title_activity_login" translatable="false">LoginActivity</string>

    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="try_button_text">Try</string>
    <string name="fill_out_the_application">Fill out the application</string>
    <string name="enter_the_amount">Enter the amount</string>
    <string name="enter_first_name">Enter first name</string>
    <string name="enter_last_name">Enter last name</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="send_request">Send request</string>

    <string name="text_percent_layout">Annual Percentage: 0.0 %</string>
    <string name="text_percent">Annual Percentage:</string>
    <string name="percent_symbol" translatable="false">%</string>

    <string name="text_period_layout">Period in days: 0</string>
    <string name="text_period">Period in days:</string>

    <string name="text_amount_layout">Amount: 0</string>
    <string name="text_amount">Amount:</string>

    <string name="invalid_first_name">" The name field must not be empty"</string>
    <string name="invalid_last_name">" The last name field must not be empty"</string>
    <string name="invalid_phone_number">Not a valid phone number</string>
    <string name="ok" translatable="false">OK</string>
    <string name="loan_terms_text">At the moment, the loan is available on the terms</string>
    <string name="max_amount">Max amount:</string>
    <string name="i_m_agree">I\'m agree</string>
    <string name="home">Home</string>
    <string name="new_loan">New loan</string>
    <string name="settings">Settings</string>

    <!-- Preference-->
    <string name="language">Language</string>
    <string name="theme">Theme settings</string>
    <string name="log_out">Log out</string>
    <string name="click_to_exit">Click to exit</string>
    <string name="settings_reset">All settings will be reset</string>
    <string name="choose_language">Choose language</string>
    <string name="switch_theme">Switch theme</string>
    <string name="attachment_summary_on">Dark theme included</string>
    <string name="attachment_summary_off">Light theme included</string>
    <string name="theme_key" translatable="false">theme key</string>
    <string name="language_key" translatable="false">language key</string>
    <string name="log_out_key" translatable="false">log out key</string>
    <string name="dark_mode_def_value" translatable="false">MODE_NIGHT_FOLLOW_SYSTEM</string>
    <string name="dark_mode">Dark Mode</string>

    <string name="exit_message">Are you sure you want to log out of your account?</string>
    <string name="exit">Exit</string>
    <string name="close">Close</string>
    <string name="data_not_deleted">Data not deleted</string>

    <string name="detailed_information_from">Detailed information on a loan request from:</string>
    <string name="borrower_name">Borrower name:</string>
    <string name="borrower_s_surname">Borrower surname:</string>
    <string name="phone_number">Phone number:</string>

    <string name="text_approved_state">Your loan application has been approved!</string>
    <string name="text_rejected_state">Your loan application has been rejected</string>
    <string name="text_registered_state">Your loan application is being processed</string>
    <string name="success_info">* To receive money, contact any branch of our bank or contact us by phone to arrange a loan transfer to your card.</string>
    <string name="info_request">* Expect notification of loan approval soon, or you can check the information yourself on the home screen.</string>
    <string name="id" translatable="false">Id:</string>

    <string name="server_error">Internal server error. Try again after a while.</string>
    <string name="exist_user">A user with this login already exists. Give yourself a different username.</string>
    <string name="user_unauthorized">User authorization error. The system cannot find your username.</string>
    <string name="access_denied">Access to the resource is denied.</string>
    <string name="user_not_found">User not found. Check or correct your login details</string>
    <string name="internet_error">Internet error</string>
    <string name="view_pager_text_one">You have successfully registered. We suggest that you familiarize yourself with a short introduction instruction. Just scroll to the right.</string>
    <string name="view_pager_text_two">New loan tab. You will be offered the current loan terms. If the conditions suit you, you can agree and proceed to the registration, or wait for the next applications and go later.</string>
    <string name="view_pager_text_three">Next, you will be asked to fill out a simple form. On this screen, you must also select the amount you need up to which you have been approved. Upon successful completion of the form, you will be taken to a success screen.</string>
    <string name="view_pager_text_four">After filling out the application, you can see it on the main screen with its current status. Registered, rejected and approved. You can click on any of your applications to find out more information.</string>
    <string name="view_pager_text_five">It was a short briefing. You will now need to make your first application. Good luck!</string>
    <string name="payment_notification">Payment notification</string>
    <string name="notification_info">You have an unpaid loan from:</string>
    <string name="several_loans_info">You have several outstanding loans that need to be paid. Number of loans:</string>
</resources>