<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/theme">

        <SwitchPreferenceCompat
            app:key="@string/theme_key"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/switch_theme" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/language">

        <ListPreference
            app:defaultValue="english"
            app:entries="@array/language_entries"
            app:entryValues="@array/language_values"
            app:key="@string/language_key"
            app:title="@string/choose_language"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/log_out">

        <Preference
            android:key="@string/log_out_key"
            android:summary="@string/settings_reset"
            android:title="@string/click_to_exit" />

    </PreferenceCategory>

</PreferenceScreen>